@@ -213,7 +213,7 @@ class DLM_Reports {
 	async fetchUserData( offset = 0, limit = dlmPHPinfo['retrieved_user_data'] ) {
 
 		// Let's see if these are pretty permalinks or plain
-		let fetchingLink = dlmUserDataAPI + '&offset=' + offset + '&limit=' + limit;
+		let fetchingLink = dlmUserDataAPI + '&offset=' + offset + '&limit=' + limit + '&start_date=' + dlmReportsInstance.createDateElement(dlmReportsInstance.dates.downloads.start_date);
 
 		const fetchedUserData = await fetch(fetchingLink);
 
@@ -1105,6 +1105,7 @@ class DLM_Reports {
 			}
 			dlmReportsInstance.setTopDownloads();
 			element.data('dateRangePicker').close();
+			jQuery(document).trigger('dlm_daterangepicker_on_close', [element, dlmReportsInstance]);
 		});
 
 		switch (opener.target) {
